[package]
name = "hightime"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A high-level time library focused on simplicity"
homepage = "https://github.com/nw0/hightime-rs"
documentation = "https://docs.rs/hightime"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
std = []
unstable = []

[dependencies]
